manifests/ingress/ingress-prom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: prom.deepaktyagi.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable-kube-prometheus-sta-prometheus
                port:
                  number: 9090
